; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltRegisterExtModuleElement.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltRegisterExtModuleElement.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xsltElementsHash = common dso_local global i32* null, align 8
@xsltExtMutex = common dso_local global i32 0, align 4
@xsltFreeExtElementEntry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xsltRegisterExtModuleElement(i32* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32 0, i32* %10, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %20, label %14

14:                                               ; preds = %4
  %15 = load i32*, i32** %7, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %14
  %18 = load i32*, i32** %9, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %17, %14, %4
  store i32 -1, i32* %5, align 4
  br label %51

21:                                               ; preds = %17
  %22 = load i32*, i32** @xsltElementsHash, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %26

24:                                               ; preds = %21
  %25 = call i32* @xmlHashCreate(i32 10)
  store i32* %25, i32** @xsltElementsHash, align 8
  br label %26

26:                                               ; preds = %24, %21
  %27 = load i32*, i32** @xsltElementsHash, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %26
  store i32 -1, i32* %5, align 4
  br label %51

30:                                               ; preds = %26
  %31 = load i32, i32* @xsltExtMutex, align 4
  %32 = call i32 @xmlMutexLock(i32 %31)
  %33 = load i32, i32* %8, align 4
  %34 = load i32*, i32** %9, align 8
  %35 = call i32* @xsltNewExtElement(i32 %33, i32* %34)
  store i32* %35, i32** %11, align 8
  %36 = load i32*, i32** %11, align 8
  %37 = icmp eq i32* %36, null
  br i1 %37, label %38, label %39

38:                                               ; preds = %30
  store i32 -1, i32* %10, align 4
  br label %47

39:                                               ; preds = %30
  %40 = load i32*, i32** @xsltElementsHash, align 8
  %41 = load i32*, i32** %6, align 8
  %42 = load i32*, i32** %7, align 8
  %43 = load i32*, i32** %11, align 8
  %44 = bitcast i32* %43 to i8*
  %45 = load i32, i32* @xsltFreeExtElementEntry, align 4
  %46 = call i32 @xmlHashUpdateEntry2(i32* %40, i32* %41, i32* %42, i8* %44, i32 %45)
  br label %47

47:                                               ; preds = %39, %38
  %48 = load i32, i32* @xsltExtMutex, align 4
  %49 = call i32 @xmlMutexUnlock(i32 %48)
  %50 = load i32, i32* %10, align 4
  store i32 %50, i32* %5, align 4
  br label %51

51:                                               ; preds = %47, %29, %20
  %52 = load i32, i32* %5, align 4
  ret i32 %52
}

declare dso_local i32* @xmlHashCreate(i32) #1

declare dso_local i32 @xmlMutexLock(i32) #1

declare dso_local i32* @xsltNewExtElement(i32, i32*) #1

declare dso_local i32 @xmlHashUpdateEntry2(i32*, i32*, i32*, i8*, i32) #1

declare dso_local i32 @xmlMutexUnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
